--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+
+<head>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5601707293367871"
+     crossorigin="anonymous"></script>
+</head>
     <style>
 #f{
     text-transform: uppercase;
